# crosshair-studio

./: index.html  main.html  monitor.html  package-lock.json  package.json  readme.cn.txt  readme.md  readme.txt  readme_cn.md  todo.md  tsconfig.json  vite.config.ts
dev/: apiWindow.ts  before-tauri-build.cjs  collect_to_release.cjs  crosshairs-web.md  todo.md
plugins/: history.d.ts  history.js
public/crosshairs/: x.url
src/: App.css  App.tsx  types.d.ts
src-main/: App.css  App.tsx  types.d.ts  vite-env.d.ts
src-main/cache/: index.tsx
src-main/crosshair/: index.tsx
src-main/hooks/: useAsyncEffect.ts  useInit.ts
src-main/hotkeys/: globalHotKeys.ts
src-main/splash/: index.css  index.tsx
src-main/utils/: index.ts
src-monitor/: App.css  App.tsx  index.css  main.tsx  variable.css
src-monitor/about/: index.tsx
src-monitor/crosshair-configure/: index.tsx
src-monitor/crosshair-downloaded/: index.tsx
src-monitor/crosshair-online/: index.tsx
src-monitor/settings-panel/: index.tsx
src-monitor/views/: index.tsx
src-public/: reade.md
src-public/hooks/: useLocalStorage.ts
src-public/types/: types.d.ts
src-public/utils/: index.ts
src-tauri/: Cargo.toml  readme.md  readme_cn.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: handler.rs  main.rs  setup.rs  tray.rs
src-tauri/src/util/: date_util.rs  is_dev.rs  logger.rs  mod.rs
src/cache/: index.tsx
src/crosshair/: index.css  index.tsx
src/hooks/: useInit.ts
src/hotkeys/: globalHotKeys.ts
src/splash/: index.css  index.tsx
src/store/: index.ts
src/utils/: index.ts
(+10 files in other folders)
